--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css" rel="stylesheet">
+    <script fetchpriority="low" src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js"></script>
 
     <style>
       .bd-placeholder-img {
@@ -124,6 +126,7 @@
 <div class="col-lg-8 mx-auto p-4 py-md-5">
   <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
     <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+      <img class="bi me-2" src="static/fastah-rounded-corners.jpeg" alt="Fastah" width="32" height="32">
       <span class="fs-4">StarWatch - satellite internet profiler by Fastah™</span>
     </a>
   </header>
@@ -141,8 +144,22 @@
         <button hidden id='feelingLuckyButton'  type="button" class="btn btn-secondary btn-lg">I am feeling lucky!</button>
       </div>
 
-    <hr class="col-3 col-md-2 mb-5">
+      <ul class="col-md-6 list-group">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
 
+    <hr class="col-3 col-md-2 mb-5">
+    <div class="embed-responsive embed-responsive-16by9" class="col-md-6 user-select-none">
+      <div id="map" style="top: 10px; bottom: 10px; height: 100vh; width: 800px;"></div>
+    </div>
+
+    <hr class="col-3 col-md-2 mb-5">
+  
+  
     <!--div class="row g-5">
       <div class="col-md-6">
         <h2 class="text-body-emphasis">Starter projects</h2>
