--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     </div-->
   </main>
   <footer class="pt-5 my-5 text-body-secondary border-top">
-    &copy; 2024 Fastah™ by Blackbuck Computing Inc. All rights reserved. <a class="link-secondary href="https://github.com/fastah/starwatch/issues">Report an issue on Github.</a><br>
+    &copy; 2024 Fastah Inc. All rights reserved. <a class="link-secondary href="https://github.com/fastah/starwatch/issues">Report an issue on Github.</a><br>
     Starlink® and SpaceX® are registered trademarks of Space Exploration Technologies Corp. 
   </footer>
 </div>
