--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Mapbox GL JS - Custom AWS and Starlink Markers with Dynamic Icon Sizes</title>
+    <meta name="description" content="IP-based geolocation for Starlink by SpaceX">
+    <meta name="author" content="Fastah Inc.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.9.3/mapbox-gl.js"></script>
