--- a/landing.html
+++ b/landing.html
@@ -72,7 +72,7 @@
           <div id="collapseAWS" class="accordion-collapse collapse show" aria-labelledby="headingAWS" data-bs-parent="#cloudAccordion">
             <div class="accordion-body">
               <ul class="list-unstyled">
-                <li><a href="/starlink_aws_nearest_regions.html">Nearest Regions</a></li>
+                <li><a href="/aws.html">Nearest Regions</a></li>
                 <li><a href="/aws/nearest-cdn">Nearest CDN</a></li>
                 <li><a href="/aws/nearest-ground-stations">Nearest AWS Ground Stations</a></li>
               </ul>
