--- a/detector.html
+++ b/detector.html
@@ -3,10 +3,10 @@
   <head><script src="color-modes.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="IP-based geolocation for Starlink by SpaceX and ViaWeb satellite internet services">
+    <meta name="description" content="IP-based geolocation for Starlink by SpaceX and ViaSat satellite internet services - Fastah™ API">
     <meta name="author" content="Fastah">
-    <title>StarWatch by Fastah™ - IP-based geolocation for Starlink by SpaceX and ViaWeb satellite internet services</title>
-    <link rel="preconnect" href="https://fastah-v2.azure-api.net" />
+    <title>Look Ma, It's a Starlink! by Fastah™ - IP-based geolocation for Starlink by SpaceX and ViaSat satellite internet services</title>
+    <link rel="preconnect" href="https://space.us-east-1.aws.api.getfastah.com" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -127,12 +127,12 @@
   <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
     <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
       <img class="bi me-2" src="static/fastah-rounded-corners.jpeg" alt="Fastah" width="32" height="32">
-      <span class="fs-4">StarWatch - satellite internet profiler by Fastah™</span>
+      <span class="fs-4">Look Ma, It's a Starlink! - satellite internet profiler</span>
     </a>
   </header>
 
   <main>
-    <h1 class="text-body-emphasis">StarWatch</h1>
+    <h1 class="text-body-emphasis">Look Ma, It's a Starlink!</h1>
     <p class="fs-5 col-md-8">Look up your internet connection's <a href="https://developer.mozilla.org/en-US/docs/Glossary/IP_Address">public IP address</a> in the <a href="./gen/latest-feeds/starlink/rfc8805.csv">Starlink-published IP geolocation feed</a> and check your <i>approximate geolocation</i> as advertised by Starlink® to app developers and streaming services worldwide.</p>
 
     <div class="mb-5">
@@ -231,7 +231,7 @@
     </div-->
   </main>
   <footer class="pt-5 my-5 text-body-secondary border-top">
-    &copy; 2024 Fastah Inc. All rights reserved. <a class="link-secondary href="https://github.com/fastah/starwatch/issues">Report an issue on Github.</a><br>
+    &copy; 2024 Fastah Inc. All rights reserved. <a class="link-secondary href="https://github.com/fastah/Look Ma, It's a Starlink!/issues">Report an issue on Github.</a><br>
     Starlink® and SpaceX® are registered trademarks of Space Exploration Technologies Corp. 
   </footer>
 </div>
