--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Look Ma, It's a Starlink API</title>
+    <title>Edge Delivery Optimizer for Starlink and ViaSat - Fastah Inc.</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Mapbox GL JS CSS -->
@@ -139,7 +139,7 @@
         <!-- Header using Bootstrap navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand">Edge Optimizer for Starlink and ViaSat - Fastah Inc.</a>
+                <a class="navbar-brand">Edge Delivery Optimizer for Starlink - Fastah Inc.</a>
             </div>
         </nav>
 
